[package]
name = "cx448"
version = "0.1.0"
categories = ["cryptography"]
description = """A pure-Rust implementation of Ed448 and Curve448 and Decaf.
This crate also includes signing and verifying of Ed448 signatures, and x448.
"""
documentation = "https://docs.rs/cx448"
homepage = "https://docs.rs/cx448"
keywords = ["cryptography", "decaf", "ed448", "ed448-goldilocks", "x448"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/dignifiedquire/cx448"
edition = "2021"
rust-version = "1.83"

[dependencies]
crypto-bigint = { version = "0.5.5", features = ["generic-array"], default-features = false }
crypto_signature = { version = "2.2", default-features = false, features = ["digest", "rand_core"], optional = true, package = "signature" }
elliptic-curve = { version = "0.13", features = ["arithmetic", "bits", "hash2curve", "jwk", "pkcs8", "pem", "sec1"] }
pkcs8 = { version = "0.10", features = ["alloc"], optional = true }
rand_core = { version = "0.6", default-features = false }
serdect = { version = "0.3.0", optional = true }
sha3 = { version = "0.10", default-features = false }
subtle = { version = "2.6", default-features = false }
zeroize = { version = "1.8", default-features = false, optional = true }

[features]
default = ["std", "signing", "pkcs8"]
alloc = ["serdect/alloc", "zeroize/alloc"]
pkcs8 = ["dep:pkcs8"]
signing = ["dep:crypto_signature", "zeroize"]
serde = ["dep:serdect"]
std = ["serdect/default", "zeroize/default", "crypto_signature/std"]
zeroize = ["dep:zeroize"]

[dev-dependencies]
hex-literal = "0.4"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde_bare = "0.5"
serde_json = "1.0"
